fixed project layout

--- a/nodeBackend/docker-compose.yml
+++ b/nodeBackend/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - auth-net
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ../init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres -d todo_db"]
       interval: 5s
