--- a/rocketBackend/Dockerfile
+++ b/rocketBackend/Dockerfile
@@ -5,6 +5,7 @@ RUN rustup target add x86_64-unknown-linux-musl
 WORKDIR /app
 RUN apt-get update && apt-get install -y musl-tools pkg-config libpq-dev
 
+COPY ../static .
 COPY . .
 
 RUN cargo build --release --target x86_64-unknown-linux-musl
