--- a/springBackend/docker-compose.yml
+++ b/springBackend/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      - ../init.sql:/docker-entrypoint-initdb.d/init.sql:ro
     networks:
       - auth-net
     healthcheck:
